
This file shows the changes in recent releases of MODx. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.8-pl (February 21, 2011)
====================================
- [#3111] Fix bug causing resource cache files to be over-written unnecessarily

MODx Revolution 2.0.7-pl (January 14, 2011)
====================================
- [#3376] Fix table creation when default storage engine is not MyISAM
- [#3472] Fix issue due to tree impr that prevented element saving success response
- Improve loading of mgr pages by preventing trees from rendering until activated
- [#3205] FC fixes: Ensure Resource Content field can have values set/renamed, that rules on create respect template, and that default values on create are set
- [#3165] Fix issue where resource/updatefromgrid processor was missing published value if user does not have publish permission
- [#2] Fix issue in user extended fields where subkeys in 2 separate containers DOM IDs conflict and prevent editing
- [#3422], [#3374], [#3197] Fix issue with filemanager_url and Image/File TVs and their relative end result URLs

MODx Revolution 2.0.6-pl2 (January 6, 2011)
====================================
- [#3350] Fix for PHP bug: http://bugs.php.net/bug.php?id=53632
- [#3347] Fix issue where renaming a file broke the browsing of directory tree
- Fix issue where FC tvDefault rules, regardless of active state, are always run

MODx Revolution 2.0.6-pl (December 20, 2010)
====================================
- [#3143] Fix lexicon grid search to respond to enter key
- [#3144] Fix issue with reset password and @ being stripped
- [#3142] Ensure whitespace is stripped from tags in tag/autotag TV types
- [#3118] Ensure defaults are set in resource/create processor if values are not sent
- [#3105] Improve memory_limit check in setup to accept integer values from PHP instances