@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.8-pl (February 21, 2011)
 ====================================
+- [#3111] Apply file locking in xPDOCacheManager->writeFile() to prevent bad writes
 - [#3111] Fix bug causing resource cache files to be over-written unnecessarily
 
 MODx Revolution 2.0.7-pl (January 14, 2011)
